add doubel+1 and fibonacci
